<resources>
    <string name="app_name">Android Trivia Game</string>
    <string name="play_button">PLAY</string>
    <string name="add_button">ADD WORD</string>
    <string name="score_button">SCORE HISTORY</string>
    <string name="play_music">Switch for Text to Speech</string>
    <string name="add_word">Add a term</string>
    <string name="score_history_text">Score History</string>
    <string name="term_text">Term</string>
    <string name="def_text">Definition</string>
    <string name="highest_time_text">Time</string>
    <string name="highest_score_text">Score</string>
    <string name="back_button">Back</string>
    <string name="time_text">Time</string>
    <string name="percent_text">Percent</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
