<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.androidtriviagame.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play_music"
                android:textAlignment="textEnd" />

            <Switch
                android:id="@+id/musicSwitch"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="playMusic"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:onClick="clickPlayLayout"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_button"
            android:onClick="clickAddLayout"/>

        <Button
            android:id="@+id/scoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_button"
            android:onClick="clickScoreLayout"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
